--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,46 @@ section {
     padding: 1.5rem 0;
 }
 
+ul li a{
+    text-decoration: none;
+    color: black;
+}
+
+li {
+    list-style: none;
+}
+
+nav {
+    height: 66px;
+}
+ nav ul li img {
+    width: 10px;
+ }
+
+.white {
+    color: white;
+}
+
 .banner {
     padding: 0;
+}
+
+.minor-navbar {
+    width: 100%;
+    height: 45px;
+    background-color: black;
+    z-index: 2;
+}
+
+.redimensioned {
+    width: 10vw;
+    min-width: 60px;
+}
+
+.m-left-auto {
+    margin-left: auto;
+}
+
+.hamburger-menu i {
+    font-size: 35px;
 }
