--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ li {
 
 nav {
     height: 66px;
+    z-index: 2;
 }
  nav ul li img {
     width: 10px;
@@ -28,7 +29,7 @@ nav {
 
 .minor-navbar {
     width: 100%;
-    height: 45px;
+    height: 40px;
     background-color: black;
     z-index: 2;
 }
@@ -44,4 +45,28 @@ nav {
 
 .hamburger-menu i {
     font-size: 35px;
+}
+
+.section-one {
+    background-position: center;
+    min-height: 70vh;
+    background-size: cover;
+    background-image: url("../img/jumbo-bg.png")
+}
+
+.mega-padd {
+    padding-top: 15rem ;
+}
+
+.btn-danger {
+    border-radius: 25px;
+    background-color: rgb(205,61,15);
+}
+
+.img-returnal {
+    max-width: 60%;
+}
+
+.section-one .container {
+    max-width: 100%;
 }
