--- a/css/style.css
+++ b/css/style.css
@@ -70,3 +70,13 @@ nav {
 .section-one .container {
     max-width: 100%;
 }
+
+.section-two .img-fluid {
+    border-radius: 25px;
+}
+
+.section-two .img-container:hover {
+    border: 3px solid rgb(0,114,206);
+    /* border-image-outset: 20px; */
+    border-radius: 25px;
+}
