--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+* {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 section {
     padding: 1.5rem 0;
 }
@@ -68,8 +72,12 @@ nav {
     background-color: rgb(205,61,15);
 }
 
-.img-returnal {
+.img-returned {
     max-width: 60%;
+}
+
+.img-ittakestwo {
+    max-width: 50%;
 }
 
 .section-one .container {
@@ -97,4 +105,15 @@ nav {
 
 .section-four .row.px-md-4 .img-container:hover {
     border-bottom: 3px solid rgb(0,114,206);
+}
+
+.section-five {
+    width: 100vw;
+    background-position: center;
+    background-size: cover;
+    background-image: url("../img/it-takes-two-hero-banner-desktop.jpg")
+}
+
+.section-six {
+    background-color: rgb(31,31,31);
 }
