--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ section {
     padding: 1.5rem 0;
 }
 
-ul li a{
+ nav ul li a{
     text-decoration: none;
     color: black;
 }
@@ -26,6 +26,17 @@ nav {
  h5 {
     color: rgb(114,114,114);
  }
+
+footer a {
+    color: white;
+    text-decoration: none;
+    padding: 5px 0;
+}
+
+footer .text-container a {
+    text-decoration: underline;
+}
+
 
 .blue {
    color: rgb(0,114,206);
@@ -138,6 +149,10 @@ nav {
 
  .btn-light.mb-3 {
     border-radius: 25px;
+ }
+
+ footer {
+    background-color: rgb(0,67,156);
  }
 
  @media screen and (min-width: 992px) {
