--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,7 @@ footer .text-container p a {
 }
 
 .section-five {
-    width: 100vw;
+    width: 100%;
     background-position: center;
     background-size: cover;
     background-image: url("../img/it-takes-two-hero-banner-desktop.jpg")
